--- a/func-asinopuzzles.csproj
+++ b/func-asinopuzzles.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>func_asinopuzzles</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.31.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
   </ItemGroup>
   <ItemGroup>
